fixed popover visibility

--- a/src/components/Popover/Popover.module.scss
+++ b/src/components/Popover/Popover.module.scss
@@ -1,6 +1,5 @@
 .popover__wrapper {
   position: relative;
-  margin-top: 1.5rem;
   display: inline-block;
 }
 
@@ -8,19 +7,22 @@
   opacity: 0;
   visibility: hidden;
   position: absolute;
-  transform: translate(0, 10px);
-  padding: 15px;
-  background-color: white;
-  border: 1px solid lightseagreen;
-  width: auto;
+  padding-top: 10px;
 }
 
-.popover__content:before {
+.popover__content__wrapper {
+  padding: 15px 20px 15px;
+  background-color: white;
+  border: 1px solid lightseagreen;
+  width: 115px;
+}
+
+.popover__pointer {
   position: absolute;
-  z-index: -1;
+  z-index: 10;
   content: "";
-  right: calc(45%);
-  top: -11px;
+  right: calc(40%);
+  top: 0;
   border-style: solid;
   border-width: 0 10px 10px 10px;
   border-color: transparent transparent lightseagreen transparent;
